--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -1,20 +1,43 @@
-name: CheckStyle
+name: Checkstyle CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+      - main  
+  pull_request:
 
 jobs:
   checkstyle:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Setup Java
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-      - name: Download CheckStyle
-        run: wget https://github.com/checkstyle/checkstyle/releases/download/checkstyle-10.12.4/checkstyle-10.12.4-all.jar -O checkstyle.jar
-      - name: Download Google Config
-        run: wget https://raw.githubusercontent.com/checkstyle/checkstyle/master/src/main/resources/google_checks.xml
-      - name: Run CheckStyle
-        run: java -jar checkstyle.jar -c google_checks.xml src/
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Setup Java 11
+      uses: actions/setup-java@v3
+      with:
+        distribution: temurin
+        java-version: 11
+
+    - name: Download Checkstyle
+      run: curl -Lo checkstyle.jar https://github.com/checkstyle/checkstyle/releases/download/checkstyle-10.24.0/checkstyle-10.24.0-all.jar
+
+    - name: Run Checkstyle analysis
+      run: java -jar checkstyle.jar -c google_checks.xml -f xml -o checkstyle-result.xml src/
+
+    - name: Upload Checkstyle report
+      uses: actions/upload-artifact@v3
+      with:
+        name: checkstyle-report
+        path: checkstyle-result.xml
+
+    - name: Fail if violations found
+      run: |
+        if grep -q '<error ' checkstyle-result.xml; then
+          echo "Checkstyle violations found. Failing the job."
+          exit 1
+        else
+          echo "No Checkstyle violations found."
+        fi
